# heraclespp

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint-cli2.yaml  .typos.toml  .yamllint.yaml  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  COPYRIGHT.md  Doxyfile  README.md  iwyu-heraclespp.json  iwyu-kokkos.json  job_cpu.sh  job_gpu.sh  job_gpu_1_adastra.sh  job_gpu_adastra.sh  job_gpu_adastra_256.sh  job_gpu_adastra_512.sh  spack.yaml  test_suite_full.sh
.github/: CODEOWNERS  dependabot.yaml
benchmarks/: CMakeLists.txt  benchmark_conv_cons_to_prim.cpp  benchmark_conv_prim_to_cons.cpp  benchmark_face_reconstruction.cpp  benchmark_time_step.cpp  main.cpp
docker/: Dockerfile
inputs/: 1d_to_3d_test.ini  advection_crenel.ini  advection_gap.ini  advection_gaussian.ini  advection_sinus.ini  eq_hydro3d_sph.ini  eq_hydro_sphe.ini  example_init.ini  gresho_vortex.ini  heat_nickel.ini  implosion_test.ini  io_root.yml  io_vtkhdf.yaml  io_vtkhdf.yml  kelvin_helmholtz.ini  param.ini  rayleigh_taylor.ini  rayleigh_taylor3d.ini  rayleigh_taylor3d_sph.ini  sedov1d.ini  sedov2d.ini  sedov3d.ini  sedov3d_sph.ini  shock_tube.ini  shock_tube1d_sph.ini  shock_tube2d_sph.ini  shock_tube3d.ini  shock_tube3d_sph.ini  shock_wall.ini  shock_wall_pg.ini  shock_wall_rad.ini  stratified_atm.ini  test3D_sph.ini  v1d_1d.ini  v1d_1d_5e2_768p.ini  v1d_1d_fx_ni.ini  v1d_2d.ini  v1d_2d_5e1_768p.ini  v1d_2d_5e2_768p.ini  v1d_2d_fx_ni.ini  (+7 more)
script/: io_root.yml
src/: CMakeLists.txt  Kokkos_shortcut.hpp  array_conversion.cpp  array_conversion.hpp  boundary.cpp  boundary.hpp  boundary_distribute.cpp  boundary_distribute.hpp  boundary_factory.cpp  boundary_factory.hpp  broadcast.cpp  broadcast.hpp  buffer.cpp  buffer.hpp  cfl_cond.cpp  cfl_cond.hpp  config.h.in  conv.cpp  conv.hpp  coordinate_system.hpp  default_boundary_setup.hpp  default_grid_setup.hpp  default_setup.hpp  default_shift_criterion.hpp  default_user_step.hpp  domain_dec.cpp  domain_dec.hpp  eos.hpp.in  euler_equations.hpp  exact.cpp  exact.hpp  exchange.cpp  exchange.hpp  extrapolation_construction.hpp  extrapolation_time.hpp  face_reconstruction.hpp  factories.hpp  float_conversion.hpp  flux.cpp  flux.hpp  (+48 more)
src/analysis/: CMakeLists.txt  conservation.hpp  integration.cpp  integration.hpp  internal_energy.cpp  internal_energy.hpp  temperature.cpp  temperature.hpp
src/deprecated/: boundary.cpp  buffer.cpp  buffer.hpp  float_conversion.hpp  global_var.hpp
src/dual_view/: CMakeLists.txt  dual_view.hpp
src/gravity/: CMakeLists.txt  gravity.cpp  gravity.hpp
src/hydro/: .face_reconstruction.hpp.swp  CMakeLists.txt  array_conversion.cpp  array_conversion.hpp  concepts.cpp  concepts.hpp  euler_equations.cpp  euler_equations.hpp  extrapolation_reconstruction.cpp  extrapolation_reconstruction.hpp  extrapolation_time.hpp  face_reconstruction.cpp  face_reconstruction.hpp  godunov_scheme.cpp  godunov_scheme.hpp  hydro_reconstruction.cpp  hydro_reconstruction.hpp  limited_linear_reconstruction.cpp  limited_linear_reconstruction.hpp  pressure_fix.cpp  pressure_fix.hpp  riemann_solver.cpp  riemann_solver.hpp  slope_limiters.cpp  slope_limiters.hpp  source_terms.cpp  source_terms.hpp  time_step.cpp  time_step.hpp
src/io/: CMakeLists.txt  config.yaml.cpp  config.yaml.hpp  io.cpp  io.hpp  io_hdf5.cpp  io_hdf5.hpp
src/mesh/: CMakeLists.txt  geometry.cpp  geometry.hpp  geometry_factory.cpp  geometry_factory.hpp  grid.cpp  grid.hpp  grid_factory.cpp  grid_factory.hpp  grid_type.cpp  grid_type.hpp  range.cpp  range.hpp
src/moving_grid/: CMakeLists.txt  moving_grid.cpp  moving_grid.hpp
src/setups/1d_to_3d_test/: setup.hpp
src/setups/advection_gap/: setup.hpp
src/setups/advection_gaussian/: setup.hpp
src/setups/advection_sinus/: setup.hpp
src/setups/eq_hydro3d_sph/: setup.hpp
src/setups/eq_hydro_sphe/: setup.hpp
src/setups/gresho_vortex/: setup.hpp
src/setups/heat_nickel/: setup.cpp  setup.hpp
src/setups/implosion_test/: setup.hpp
src/setups/kelvin_helmholtz/: setup.hpp
src/setups/rayleigh_taylor/: setup.hpp
src/setups/rayleigh_taylor3d/: setup.hpp
src/setups/rayleigh_taylor3d_sph/: setup.hpp
src/setups/sedov1d/: setup.hpp
src/setups/sedov2d/: setup.hpp
src/setups/sedov3d/: setup.hpp
src/setups/shock_tube/: setup.hpp
src/setups/shock_wall/: setup.hpp
src/setups/stratified_atm/: setup.hpp
src/setups/test3D_sph/: setup.hpp
src/setups/v1d/: setup.hpp  v1d_1d_start.h5  v1d_1d_start.h5.license  v1d_5e1_768p.h5  v1d_5e2_768p.h5
src/setups/v1d_3_grum/: setup.hpp
src/setups/v1d_3d/: setup.hpp
src/setups/v1d_500/: setup.hpp  v1d_500_logr_grid_n1000.h5
src/setups/v1d_center/: setup.hpp
src/setups/v1d_n_grum/: setup.hpp
src/thermodynamics/: CMakeLists.txt  PerfectGas.cpp  PerfectGas.hpp  RadGas.cpp  RadGas.hpp  perfect_gas.cpp  perfect_gas.hpp  rad_gas.cpp  rad_gas.hpp
src/units/: CMakeLists.txt  units.cpp  units.hpp
src/user_step/: CMakeLists.txt  user_step.cpp  user_step.hpp  user_step_factory.cpp  user_step_factory.hpp
src/utils/: CMakeLists.txt  eos.hpp.in  geom.hpp.in  git_version.cpp.in  git_version.hpp  int_cast.cpp  int_cast.hpp  kokkos_shortcut.cpp  kokkos_shortcut.hpp  kronecker.cpp  kronecker.hpp  ndim.hpp.in  nova_params.cpp  nova_params.hpp  param.cpp  param.hpp  print_info.cpp  print_info.hpp
test/: 1d_to_3d_test.py  ad_crenel.h5  build_suite_full.py  build_suite_full.sh  check_convergence_advection_gaussian.py  check_convergence_advection_sinus.py  check_convergence_advection_sinusoide.py  convergence_advection_gaussian.yml  convergence_advection_sinus.yml  convergence_advection_sinusoide.yml  exactSedov.hdf5  exactTube.hdf5  exact_sedov.py  exact_shockTube.py  exact_shock_tube.py  fonction.py  param.py  (+51 more)
tests/: CMakeLists.txt  broadcast.cpp  conversions.cpp  dual_view.cpp  euler_equations.cpp  gravity.cpp  grid_type.cpp  int_cast.cpp  kokkos_shortcut.cpp  kronecker.cpp  last_hdf5.py  main.cpp  partitioner.cpp  perfect_gas.cpp  print_info.cpp  rad_gas.cpp  range.cpp  riemann_solvers.cpp  slopes.cpp  thermodynamics.cpp  utils_dual_view.hpp
(+49 files in other folders)
